fix: resolved url linking

--- a/books/templates/books/all_books.html
+++ b/books/templates/books/all_books.html
@@ -8,7 +8,7 @@
 <body>
     <h1>All Books</h1>
     {% for book in all_books %}
-        <p>{{ book.title }} </p>
+        <a href="{% url 'retrieve-single-book' book.id %}"><p>{{ book.title }} </p></a>
         <p>{{ book.author }}</p>
         <p>{{ book.publication_date }}</p>
         <p>{{ book.price }}</p>
